# codeclub-astro

./: .gitignore  README.md  astro.config.mjs  check-broken-links.sh  package-lock.json  package.json  pyproject.toml  python-editor.html  tsconfig.json
.astro/: data-store.json  settings.json
.github/workflows/: deploy.yml
public/activities/adventurelib-based/: sample.py
public/activities/pygame-zero-based/: sample.py
public/tests/: sample.py
src/components/: Accordion.astro  AccordionEntry.astro  AccordionItem.astro  ActivityCard.astro  Badge.astro  Card.astro  CodeBlock.astro  ConditionalLink.astro  Footer.astro  Header.astro  ProjectCard.astro  ProjectList.astro  TableOfContents.astro
src/components/sketches/: CheckeredFlagP5Sketch.astro  CrazyBallsP5Sketch.astro  FireworkP5Sketch.astro  PerlinBezierP5Sketch.astro  PerlinFieldP5Sketch.astro  PerlinFlowP5Sketch.astro  TruchetTilesPerlinSketch_Circles.astro  TruchetTilesPerlinSketch_Diagonals.astro  TruchetTilesPerlinSketch_Smith.astro  TruchetTilesPerlinSketch_Triangles.astro  WavesP5Sketch.astro
src/layouts/: P5PageLayout.astro  PageLayout.astro
src/pages/: index.astro
src/pages/tests/: AccordionTest.astro  ActivityCardTest.astro  BadgeTest.astro  CodeBlockTest.astro  PageLayoutTest1.astro  PageLayoutTest2.astro  ProjectListTest.astro  (+1 more)
src/scripts/: custom-guizero.js  pages.js  utils.js
src/styles/: global.css
tests/: Accordion.spec.ts  ActivityCard.spec.ts  Badge.spec.ts  CodeBlock.spec.ts  ExternalStylesheets.spec.ts  NavigationStyling.spec.ts  PageLayout.spec.ts  ProjectList.spec.ts
(+52 files in other folders)
